force-app/main/default/objects/HabilidadesdoContato__c/HabilidadesdoContato__c.object-meta.xml
<CustomObject>
    <description>Lista de habilidades para o contato</description>
    <label>Habilidades do Contato</label>
    <nameField>
        <displayFormat>Skill-{000000000}</displayFormat>
        <label>Habilidades do Contato</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Habilidades do Contato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>