force-app/main/default/objects/HabilidadesdoContato__c/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <description>Contato referente a habilidade</description>
    <inlineHelpText>Contato referente a habilidade</inlineHelpText>
    <label>Contato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Habilidades do Contato</relationshipLabel>
    <relationshipName>HabilidadesdoContato</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>