force-app/main/default/objects/HabilidadesdoContato__c/fields/Habilidade__c.field-meta.xml
<CustomField>
    <fullName>Habilidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relacionamento com Contato</description>
    <inlineHelpText>Relacionamento com Contato</inlineHelpText>
    <label>Habilidade</label>
    <referenceTo>Habilidade__c</referenceTo>
    <relationshipLabel>Habilidades do Contato</relationshipLabel>
    <relationshipName>HabilidadesdoContato</relationshipName>
    <type>Lookup</type>
</CustomField>