force-app/main/default/objects/HabilidadesdoContato__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Classificação da habilidade do contato</description>
    <inlineHelpText>Classificação da habilidade do contato</inlineHelpText>
    <label>Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>