force-app/main/default/objects/HabilidadesdoContato__c/fields/Ranking__c.field-meta.xml
<CustomField>
    <fullName>Ranking__c</fullName>
    <description>mede o nível da habilidade.</description>
    <inlineHelpText>mede o nível da habilidade.</inlineHelpText>
    <label>Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>